huge update to romania postwar <@817429028025008178> <@798664083011534879>

--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -496,7 +496,9 @@ ROM_integration_of_szekelyfold:0 "Integrate [778.GetName]"
 ROM_integration_of_east_alford:0 "Integrate [1020.GetName]"
 ROM_pillage_hungary:0 "Pillage the [HUN.GetAdjective] Border"
 ROM_form_the_little_entente:0 "Form the Little Entente"
+ROM_form_the_little_entente_desc:0 "The formation of the Little Entente is a crucial measure to secure our national interests and protect the stability of our borders against Hungarian revisionism and the potential resurgence of Habsburg influence in Austria or Hungary. By aligning with Czechoslovakia, we shall create a unified front dedicated to preserving the territorial gains that define our post-war sovereignty and ensure regional peace. France has announced its support to our future alliance, providing the diplomatic and security assurances we need. This partnership stands not only as a mutual defense pact but also as a clear statement that we will uphold the treaties and protect the balance established after the Great War, ensuring our independence and stability in Eastern Europe against any forces seeking to challenge it."
 ROM_anti_hungarian_propaganda:0 "Anti-Hungarian Propaganda"
+ROM_anti_hungarian_propaganda_desc:0 "It is our duty to counter Hungarian attempts to undermine our sovereignty and the stability of Eastern Europe. we shall communicate to our people and to our Western allies that Hungarian revisionism poses a clear threat to the borders secured by the Treaty of Trianon. Hungary's aspirations to reclaim Transylvania are a direct challenge to the integrity of Greater Romania, and we will present this as a danger not only to our nation but to the peace of the entire region."
 ROM_retry_to_secure_banat:0 "Finders Keepers"
 ROM_retry_to_secure_banat_desc:0 "Securing [764.GetName] has been an objective by the [ROM.GetAdjective] Government since our failure of obtaining it at the Paris Peace Conference."
 ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
@@ -527,11 +529,18 @@ ROM_suppress_use_of_hungarian_in_szekelyfold:0 "Suppress Hungarian in [778.GetNa
 ROM_invite_serbia_to_little_entente:0 "Invite [SER.GetName] to Little Entente"
 ROM_serbian_intervention_in_hungarian_conflict:0 "Seek [SER.GetAdjective] Intervention"
 ROM_romanianize_alfold:0 "Romanianize [154.GetName]"
-
-
-
-
+ROM_seize_hungarian_railstuffs:0 "Seize Hungarian Railway Equipment"
+ROM_seize_hungarian_goods_and_livestock:0 "Seize Hungarian Goods"
+ROM_concede_on_the_tariff_issue:0 "Concede on the Tariff Issue"
+ROM_land_reform:0 "Land Reform"
+ROM_new_constitution_interwar:0 "Draft a New Constitution"
+ROM_special_rights_to_minorities:0 "Special Rights to Minorities"
+ROM_special_rights_to_minorities_desc:0 "There are relevant minority groups present in Greater Romania, such as the Hungarians, the Ukrainians and the Roma. We need to protect these minority groups to help further develop the country of Romania into the shining light in Eastern Europe."
+ROM_claims_on_morava:0 "Claims on [809.GetName]"
+ROM_claims_on_morava_desc:0 "[809.GetName] is a province that has a large Romanian minority. We need to encompass all Romanians into Greater Romania, România Mare."
 ## -- TOOLTIPS -- ##
+hungarian_romanian_war_winner:0 "Winner of the Hungarian-Romanian War"
+hungarian_romanian_war_loser:0 "Loser of the Hungarian-Romanian War"
 ROM_modify_supress_hung.tt:0 "§WModify §W§YSuppressed Hungarian Language§Y§W by \n£manpower_texticon Local manpower:§W§G +10%§G§W"
 ROM_serbia_little_entente_fail:0 "§W[SER.GetNameWithFlag] §W§Rrefuses§R§W to join the §W§YRomanian-Hungarian War§Y§W"
 depends_on_idea_ROM_navy.tt:0 "§WDepending on which idea you picked in the previous focus, it will be §W§Gbuffed§G§W in this focus.§W"
@@ -591,10 +600,11 @@ ROM_m2ifocus:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Fact
 ROM_ift2.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
 ROM_talk_tuah.tt:0 "Modify §YRomanian Economy§! by\nConsumer Goods Factories factor: §Y-10.0%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£factory_output_texticon Factory Output: §G+5.00%§!"
-
+ROM_shgal.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed:§G +5.00%§G§W\n£consumer_goods_texticon Consumer Goods Factories factor:§W§Y -7.5%§Y§W\n£stability_texticon Gain Base Stability:§W§R -5.00%§R§W"
 ROM_mife.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+20.0%§!"
-
-
+ROM_shgal2.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor:§W§Y -2.5%§Y§W\n£stability_texticon Gain Base Stability:§W§R -5.00%§R§W"
+ROM_freed_hungary:0 "Ended the Occupation of Hungary"
+event_chain_hungary.tt:0 "§WThis will start an §W§Revent chain§R§W for the occupation of Hungary§W"
 ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!\n£stability_texticon Stability: §G+5.00%§!"
 ROM_end_foreign_purchases:0 "Reduce Foreign Equipment Purchases"
 ROM_mife2.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.15§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-20.0%§"
@@ -1012,6 +1022,24 @@ ww1_romania.81.b:0 "We need to recover from the war first..."
 ww1_romania.108.t:0 "King Ferdinand delivers a speech to the people"
 ww1_romania.108.d:0 ""Romanians! The war which for the last two years has been encircling our frontiers more and more closely has shaken the ancient foundations of Europe to their depths. It has brought the day which has been awaited for centuries by the national conscience, by the founders of the Romanian State, by those who united the principalities in the war of independence, by those responsible for the national renaissance. It is the day of the union of all branches of our nation. Today we are able to complete the task of our forefathers and to establish forever that which Michael the Great was only able to establish for a moment, namely, a Romanian union on both slopes of the Carpathians."\n-King Ferdinand I of [ROM.GetName]"
 ww1_romania.108.a:0 "De la Nistru pana la Tisa!"
+ww1_romania.110.t:0 "[ROM.GetName] occupies Hungarian lands!"
+ww1_romania.110.d:0 "Following its victory in the Hungarian-Romanian War, almost all of Hungary was soon occupied by Romanian troops who show no sign of leaving. They have taken over the native Hungarian people's jobs of policing and other affairs. The hungarian people are being suppressed and are calling out for help. Should we condemn them?"
+ww1_romania.110.a:0 "This occupation must end!"
+ww1_romania.110.b:0 "It's none of our buisness."
+ww1_romania.111.t:0 "[FROM.GetName] condemns our occupation"
+ww1_romania.111.d:0 "[FROM.GetName] has condemned our occupation of the enemy of Hungary."
+ww1_romania.111.a:0 "If we don't intervene, the Hungarians come back!"
+ww1_romania.111.b:0 "We should end the occupation."
+ww1_romania.112.t:0 "Protests in Occupied Hungary"
+ww1_romania.112.d:0 "A bunch of Anti-Romanian protests exploded on the streets of major cities in Hungary. How should we deal with the protests?"
+ww1_romania.112.a:0 "Supress them!"
+ww1_romania.113.t:0 "Protests in Occupied Hungary"
+ww1_romania.113.d:0 "A bunch of Anti-Romanian protests exploded on the streets of major cities in Hungary. How should we deal with the protests?"
+ww1_romania.113.a:0 "Keep suppressing!"
+ww1_romania.114.t:0 "Allies demand our army to retreat out of Hungary"
+ww1_romania.114.d:0 "The Entente demands the end to our occupation of the Hungarian lands."
+ww1_romania.114.a:0 "Fine."
+# EVENTS_END
 ## -- IDEAS -- ##
 ROM_unionist_zeal:0 "Unionist Zeal"
 ROM_unionist_zeal_desc:0 "Ever since the unification in 1859 the dream of reuniting the romanian people from both sides of the Carphatians and those from over the Prut river has been the nation's dream, a Romania for romanians."
@@ -1081,6 +1109,7 @@ ROM_black_sea_fleet:0 "The Romanian Black Sea Fleet"
 ROM_defense_of_danube2:0 "Defense of the Danube River"
 ROM_black_sea_fleet2:0 "The Romanian Black Sea Fleet"
 ROM_anti_hungarian_propaganda_idea:0 "Anti-Hungarian Propaganda"
+
 ROM_recently_raided:0 "Recently Raided"
 ROM_unionist_zeal2:0 "Unionist Zeal"
 ROM_occupation_costs_rom:0 "Central Powers Occupation Costs"
@@ -1248,3 +1277,5 @@ ROM_pillage_the_hungarian_border_decision:0 "Pillage the Hungarian Border"
 
 
 
+## -- OTHER -- ##
+ROM_entente_condemned_actions:0 "Condemned action"
