--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -521,16 +521,21 @@ ROM_strong_arm_parliament:0 "Strong Arm Parliament"
 ROM_victory_in_hungarian_war:0 "Victory Against Hungary... Again"
 ROM_rebuild_transylvania:0 "Rebuild Transylvania"
 ROM_ensure_hungarian_weakness:0 "Guarantee [HUN.GetAdjective] Weakness"
+ROM_ensure_hungarian_weakness_desc:0 "There is a possibility that Hungary conducts operations to take back their lands lost in the treaties, so to limit their expansionism, we should occupy their lands to stop any coups and loot supplies."
 ROM_realisation_of_greater_romania:0 "România Mare"
 ROM_realisation_of_greater_romania_desc:0 "Romania has finally been unified into greatness, forming the Whole Romania, Entire Romania or as the people call it, România Mare."
 ROM_promote_romanian_language:0 "Promote the Romanian Language"
 ROM_defeat_in_hungarian_war:0 "Defeat Against Hungary"
 ROM_suppress_use_of_hungarian_in_szekelyfold:0 "Suppress Hungarian in [778.GetName]"
 ROM_invite_serbia_to_little_entente:0 "Invite [SER.GetName] to Little Entente"
+ROM_invite_serbia_to_little_entente_desc:0 "With the threat of Hungarian revisionism and the shadow of the Habsburg ambitions looming, Romania must act swiftly to preserve stability in Eastern Europe. By extending an invitation to Serbia to the Little Entente, we take the first step in forging a powerful alliance against these threats. Together, our alliance will be unmatched in the Balkans."
 ROM_serbian_intervention_in_hungarian_conflict:0 "Seek [SER.GetAdjective] Intervention"
+ROM_serbian_intervention_in_hungarian-conflict_desc:0 "Locked in fierce combat with Hungarian forces, Romania now reaches out to Serbia for urgent support in our struggle. Hungarian aggression threatens not only our borders but the very stability of the region. This matter not only concerns us, but them too."
 ROM_romanianize_alfold:0 "Romanianize [154.GetName]"
 ROM_seize_hungarian_railstuffs:0 "Seize Hungarian Railway Equipment"
+ROM_seize_hungarian_railstuffs_desc:0 "Hungary might get back up on its feet at any moment, so it is best to limit their tools for revanchist expansion agaisnt us by stealing their locomotives and supply capabilities."
 ROM_seize_hungarian_goods_and_livestock:0 "Seize Hungarian Goods"
+ROM_seize_hungarian_goods_and_livestock_desc:0 "Romania is getting pressured by multiple groups including the Hungarians, some Romanians, the Entente powers and multiple leaders to end our occupation of Hungary. Since Romania is afraid of a new Habsburg rule ruling Hungary and waging more war, it is best to limit their capabilities by looting their farms to get goods and livestock."
 ROM_concede_on_the_tariff_issue:0 "Concede on the Tariff Issue"
 ROM_land_reform:0 "Land Reform"
 ROM_new_constitution_interwar:0 "Draft a New Constitution"
