--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -543,6 +543,8 @@ ROM_special_rights_to_minorities:0 "Special Rights to Minorities"
 ROM_special_rights_to_minorities_desc:0 "There are relevant minority groups present in Greater Romania, such as the Hungarians, the Ukrainians and the Roma. We need to protect these minority groups to help further develop the country of Romania into the shining light in Eastern Europe."
 ROM_claims_on_morava:0 "Claims on [809.GetName]"
 ROM_claims_on_morava_desc:0 "[809.GetName] is a province that has a large Romanian minority. We need to encompass all Romanians into Greater Romania, România Mare."
+ROM_expansion_of_the_coal_industry:0 "Expansion of the Romanian Coal Industry"
+ROM_expansion_of_the_coal_industry_desc:0 "The Romanian coal industry should be ramping up by now, with all the new territories Romania has conquered, especially near the Carpathian Mountains, an area rich with coal."
 ## -- TOOLTIPS -- ##
 hungarian_romanian_war_winner:0 "Winner of the Hungarian-Romanian War"
 hungarian_romanian_war_loser:0 "Loser of the Hungarian-Romanian War"
