--- a/localisation/english/ww1_bulgaria_l_english.yml
+++ b/localisation/english/ww1_bulgaria_l_english.yml
@@ -159,7 +159,7 @@ BUL_reac_out_to_rome:0 "Reach Out to Rome"
 BUL_grain_to_germany:0 "Export Grains to Germany"
 BUL_bury_the_hatchet:0 "Bury The Hatchet"
 BUL_genesis_of_a_counter_to_vienna:0 "Genesis of a Counter to Vienna"
-BUL_apply_french_aviation:0 "Apply French Aviation"
+BUL_apply_french_aviation:0 "French Aviation Training"
 BUL_rely_on_moscow:0 "Rely On Moscow"
 BUL_appeal_to_britain:0 "Appeal to Britain"
 BUL_appeal_to_france:0 "Appeal to France"
