kurdish and armenian decisions

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5719,13 +5719,13 @@
  TUR_settle_druze_tribes_desc:0 "Mostly located in the south of Damascus and in Mount Lebanon, Druze tribes have enjoyed a large degree of autonomy to combat Christian influence in the area as well as benefiting from their agricultural support. Yet as our government is focusing on centralizing its realm, we'll settle them into provinces we see fit."
  TUR_settle_bedouin_tribes:0 "Settle Bedouin Tribes in [FROM.GetName]"
  TUR_settle_bedouin_tribes_desc:0 "Mostly located in the south of Jerusalem and Karak, Bedouin tribes have enjoyed a an absence of state as they're located in the border region with Egypt. Yet as our government is focusing on centralizing its realm, we'll settle them into provinces we see fit."
+ TUR_settle_tribes_in_aleppo:0 "Settle Tribes in [FROM.GetName]"
+ TUR_settle_tribes_in_aleppo:0 "While Aleppo city stands as an important commercial city, the regions surrounding it is a rather desolate place. By settling tribes in [FROM.GetName], we can centralizeAleppo Vilayet."
  TUR_settle_tribes_in_deir_ez_zor:0 "Settle Tribes in [FROM.GetName]"
- TUR_settle_tribes_in_deir_ez_zor_desc:0 "Deir ez-Zor stands as a desolate place surrounded by desert. Untill know, the little Arab tribes that were present in the state has been roaming free. By settling tribes in [FROM.GetName], we can centralize Deir ez-Zor Vilayet."
+ TUR_settle_tribes_in_deir_ez_zor_desc:0 "Deir ez-Zor stands as a desolate place surrounded by desert. Untill now, small Arab and Kurdish tribes that were present in the state has been roaming free. By settling tribes in [FROM.GetName], we can centralize Deir ez-Zor Vilayet."
  TUR_nationalize_greek_businesses:0 "Nationalize Greek Businesses in [FROM.GetName]"
  TUR_nationalize_greek_businesses_desc:0 "Greeks and other Christians have held a monopoly over oue economy. By transferring their businesses to Muslim Turks, we can achieve a loyal and national bourgeoisie."
  TUR_nationalize_greek_businesses_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n"
- TUR_nationalize_greek_businesses_trabzon:0 "Nationalize Greek Businesses in [FROM.GetName]"
- TUR_nationalize_greek_businesses_trabzon_desc:0 "Greeks and other Christians have held a monopoly over oue economy. By transferring their businesses to Muslim Turks, we can achieve a loyal and national bourgeoisie."
  TUR_increase_konstantiniyye_centralization_1:0 "Modify §YCentralization§! of §YKonstantiniyye Vilayet§! by §G+1%§!\n"
  TUR_increase_catalca_centralization_1:0 "Modify §YCentralization§! of §YÇatalca Vilayet§! by §G+1%§!\n"
  TUR_increase_izmit_centralization_1:0 "Modify §YCentralization§! of §Yİzmit Vilayet§! by §G+1%§!\n"
@@ -5745,8 +5745,6 @@
  TUR_increase_trabzon_centralization_1:0 "Modify §YCentralization§! of §YTrabzon Vilayet§! by §G+1%§!\n"
  TUR_deport_greeks:0 "Deport Greeks in [FROM.GetName]"
  TUR_deport_greeks_desc:0 "There are several towns and villages that accompany a large Greek population in [FROM.GetName]. By deporting them and giving their properties to Muslims, we can create an ethnically homogenious society."
- TUR_deport_greeks_trabzon:0 "Deport Greeks in [FROM.GetName]"
- TUR_deport_greeks_trabzon:0 "There are several towns and villages that accompany a large Greek population in [FROM.GetName]. By deporting them and giving their properties to Muslims, we can create an ethnically homogenious society."
  TUR_increased_pressure_on_bulgarians:0 "Increase Pressure on Bulgarians in [FROM.GetName]"
  TUR_increased_pressure_on_bulgarians_desc:0 "As their nation state has recently gained their independence, many Bulgarians within our empire fervor with uniting with their main country. As this results in a need for more garrisons in the region, we'll combat and increase pressure on such thoughts and sentiments."
  TUR_increased_pressure_on_bulgarians_tt:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n£garrison_texticon  Required Garrisons: §R+5%§!\n\n"
@@ -5762,8 +5760,6 @@
  TUR_clash_against_armenian_gangs_desc:0 "Armenian gangs have been taking up arms in order to defend themselves ever since the tyranical rule of Abdulhamid II. Though their situation is improving, their habit of takign up arms still remain. We must combat against these groups to secure state authority."
  TUR_clash_against_armenian_gangs_tt:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §R+10.0%§!\n"
  TUR_clash_against_armenian_gangs_tt2:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\n£defence_texticon  Division Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n"
- TUR_clash_against_armenian_gangs_diyarbakir:0 "Clash Against Armenian Gangs in [FROM.GetName]"
- TUR_clash_against_armenian_gangs_diyarbakir_desc:0 "Armenian gangs have been taking up arms in order to defend themselves ever since the tyranical rule of Abdulhamid II. Though their situation is improving, their habit of takign up arms still remain. We must combat against these groups to secure state authority."
  TUR_increase_adana_centralization_1:0 "Modify §YCentralization§! of §YAdana Vilayet§! by §G+1%§!\n"
  TUR_increase_ankara_centralization_1:0 "Modify §YCentralization§! of §YAnkara Vilayet§! by §G+1%§!\n"
  TUR_increase_aleppo_centralization_1:0 "Modify §YCentralization§! of §YAleppo Vilayet§! by §G+1%§!\n"
@@ -5775,19 +5771,13 @@
  TUR_increase_erzurum_centralization_1:0 "Modify §YCentralization§! of §YErzurum Vilayet§! by §G+1%§!\n"
  TUR_exterminate_armenians:0 "Exterminate Armenians in [FROM.GetName]"
  TUR_exterminate_armenians_desc:0 "There are several towns and villages that accompany a large Armenian population in [FROM.GetName]. By marching them through desert while effectively decreasing their numbers, we can create an ethnically homogenious society."
- TUR_exterminate_armenians_diyarbakir:0 "Exterminate Armenians in [FROM.GetName]"
- TUR_exterminate_armenians_diyarbakir_desc:0 "There are several towns and villages that accompany a large Armenian population in [FROM.GetName]. By marching them through desert while effectively decreasing their numbers, we can create an ethnically homogenious society."
  TUR_usurp_assyrian_properties:0 "Usurp Assyrian Properties"
  TUR_usurp_assyrian_properties_desc:0 "While our eastern lands don't have much to offer, the little they have are being owned by Christians. By confiscating their properties, we can decrease their influence."
  TUR_usurp_assyrian_properties_tt:0 "Modify £ww1_flag_ASY §YAssyrian Minority§! by\n£civ_factory  Max Factories in a State: §G+5%§!\n\n"
- TUR_usurp_assyrian_properties_diyarbakir:0 "Usurp Assyrian Properties"
- TUR_usurp_assyrian_properties_diyarbakir_desc:0 "While our eastern lands don't have much to offer, the little they have are being owned by Christians. By confiscating their properties, we can decrease their influence."
  TUR_increase_diyarbakir_centralization_1:0 "Modify §YCentralization§! of §YDiyarbakır Vilayet§! by §G+1%§!\n"
  TUR_increase_mosul_centralization_1:0 "Modify §YCentralization§! of §YMosul Vilayet§! by §G+1%§!\n"
  TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
  TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
- TUR_massacre_assyrians_diyarbakir:0 "Massacre Assyrians in [FROM.GetName]"
- TUR_massacre_assyrians_diyarbakir_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
  TUR_caliphs_authority_in_egypt_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£compliance_gain_texticon  Compliance Growth Speed: §G+3%§!\n\n"
  TUR_increase_cairo_centralization_20:0 "Modify §YCentralization§! of §YCairo Vilayet§! by §G+20%§!\n"
  TUR_increase_marsa_matruh_centralization_20:0 "Modify §YCentralization§! of §YMarsa Matruh Vilayet§! by §G+20%§!\n"
