--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5162,10 +5162,12 @@
  TUR_crush_the_arabist_movement_desc:0 "Opposition of the Arabist movement and its effects on our lands have been minimized. While we still have the chance, we must put the nail on the coffin of the Arabist movement, and other separatist movements to come."
  TRS_arab_opposition_has_no_effect:0 "§YArab Opposition§! has no negative modifiers on our nation.\n"
  TUR_remove_arab_opposition_tt:0 "Remove §YArab Opposition§!.\n"
- TUR_subjugate_christians:0 "Subjugate Christians"
- TUR_subjugate_christians_desc:0 "Syria is home to many religions. From Shia to Sunni Muslims, Greek Orthodoxes to Maronite Christians, even the Druze, the region has numerous religious authorities. As many Christians communities have their loyalties in European powers rather than our empire, we'll move towards integrating their structures into the empire."
  TUR_integrate_jewish_colonies:0 "Integrate Jewish Colonies"
  TUR_integrate_jewish_colonies_desc:0 "Ever since Jewish immigration started to the holy lands, many wealthy Jews have started to purchase land and even started their own settler colonies in the region. As these colonies and overall Jewish communities are away from state control, its time for our state to pay a visit to these "independent" colonies."
+ TUR_subjugate_christians:0 "Subjugate Christians"
+ TUR_subjugate_christians_desc:0 "Syria is home to many religions. From Shia to Sunni Muslims, Greek Orthodoxes to Maronite Christians, even the Druze, the region has numerous religious authorities. As many Christians communities have their loyalties in European powers rather than our empire, we'll move towards integrating their structures into the empire."
+ TUR_deportations_in_syria:0 "Deportations in Syria"
+ TUR_deportations_in_syria_desc:0 "Our central government in [TUR.capital.GetName] has enacted several policies on the deportation of Armenians, Assyrians and other Christians in Anatolia to the Syrian desert. As the finaly destination of the deportations are located within our territory, the central government needs our cooperation to successfully enact these plans."
  TUR_integrate_jewish_colonies_tt:0 "Modify £ww1_flag_ISR  §YJewish Minority§! by\n£resources_texticon  Resource Gain Efficiency: §G+5.00%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n\n"
  TUR_integrate_jewish_colonies_tt2:0 "Unlocks £decision_icon_small  §YGive Citizenship to Jews§! Decisions.\n"
  TUR_ottoman_state_in_syria:0 "Ottoman State in Syria"
@@ -5179,9 +5181,9 @@
  TUR_nationalize_railways_tt:0 "If at war with §Y[FRA.GetName]§!, these decisions will be replaced and we'll be able to §Yseize§! mentioned §Yrailways§! and §Yports§! without paying a price.\n"
  TUR_occupy_mount_lebanon:0 "Occupy Mount Lebanon"
  TUR_occupy_mount_lebanon_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate with a vide autonomy. Apart from various exceptions, we're forbidden to put troops in the region. By occupying Mount Lebanon, we'll decrease their defacto autonomy and put troops in the region."
- TUR_settle_arab_tribes:0 "Settle Arab Tribes"
- TUR_settle_arab_tribes_desc:0 "Tribal structures is the greatest underminer of the state authority. As many tribes reside within the Syrian region, we'll move towards settling them and integrating them as yet another citizen of the empire."
- TUR_settle_arab_tribes_tt:0 "Unlocks £decision_icon_small  §YSettle Druze Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Bedouin Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Deir ez-Zor Tribes§! Decisions.\n"
+ TUR_settle_unruly_tribes:0 "Settle Unruly Tribes"
+ TUR_settle_unruly_tribes_desc:0 "Tribal structures is the greatest underminer of the state authority. As many tribes reside within the Syrian region, we'll move towards settling them and integrating them as yet another citizen of the empire."
+ TUR_settle_unruly_tribes_tt:0 "Unlocks £decision_icon_small  §YSettle Druze Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Bedouin Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Aleppo Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Deir ez-Zor Tribes§! Decisions.\n"
  TUR_the_ideal_province:0 "The Ideal Province"
  TUR_the_ideal_province_desc:0 "While other provinces in the empire are being ruined by corruption and separatism, Syria under Cemâl Paşa has been overseeing a transition. Working day and night to create the perfect citizen for the empire, Cemâl has promise to successfully reform and centralize the Syrian provinces. His goal has been to create an ideal province our of Syria."
  TUR_the_ideal_province_tt:0 "Unlocks £decision_icon_small  §YMass Education§! Decisions in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YConstruction Endeavours§! Decisions in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YCurb Foreign Influence§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\n\nUnlocks £decision_icon_small  §YIntegrate Arab Citizens§! Decisions.\nUnlocks £decision_icon_small  §YIntegrate Jewish Citizens§! Decisions.\nThese decisions will become visible once the §YCentralization§! of their respective §YVilayets§! become §Y100%§!.\n"
@@ -5321,6 +5323,7 @@
  TRS_dissolve_the_debt_council:0 "Dissolve the Debt Council"
  TRS_dissolve_the_debt_council_desc:0 "Ottoman Public Debt Administration and later Ottoman Public Debt has been in a thorn on our side, chaining our economy and giving foreign powers excessive control over it. As we're taking steps to pay our debts, our final goal will be to dissolving the existence on the council once and for all."
  TRS_dissolve_the_debt_council_tt:0 "Modify §YOttoman Public Debt§! by\n£improve_relations_cost_texticon  Improve relations maintain cost: §R+5%§!\n£traded_goods_texticon  Resources to Market: §Y-20%§!\n\n"
+ TUR_reduce_arab_stability_1:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §Y[TUR_the_sublime_realm_name]§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n\n"
 
  FRA_ww1_dreyfus_exoneration:0 "Dreyfus Exoneration Aftermath"
  FRA_ww1_dreyfus_exoneration_desc:0 "Exempt since 1906, Alfred Dreyfus is still at the heart of the political debate. It is time to close this painful parenthesis of the 3rd Republic."
