--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14503,6 +14503,13 @@ ww1_greece.246.a: "Our failures continue to burden us."
  ww1_sra.42.a: "Their support could turn the tide in our favor."
  ww1_sra.42.b: "Our path is ours alone."
  sra_rada_when_established_tt: "The §YKuban Rada§! will establish in our government once we capture §YYekaterinodar§!."
+ ww1_sra.44.t: "Disbandment of the Kuban Army"
+ ww1_sra.44.d: "In a drastic response to recent events and growing internal pressure, the Kuban Rada has ordered Cossacks to abandon their positions on the frontlines and return to their homeland in Kuban. This move not only weakens our collective military efforts but also signals a significant shift in the Kuban Rada's allegiance and priorities. The sudden withdrawal of these forces could leave critical gaps in our defenses and diminish our operational capabilities against our adversaries."
+ ww1_sra.44.a: "This will not go unanswered."
+
+ ww1_sra.45.t: "Kuban Rada's Disloyalty"
+ ww1_sra.45.d: "The Kuban Rada's ongoing drive for greater autonomy, coupled with a marked decline in loyalty, has pushed them to the brink of secession from our governance. Their grievances, left unaddressed while we focused on broader conflicts, have fermented into a bold declaration of independence intentions."
+ ww1_sra.45.a: "We will finish this fight without them."
  ww1_sra.46.t: "Mykola Riabovil's Speech"
  ww1_sra.46.d: "At a recent conference, Mykola Riabovil, head of the Kuban Council, has openly criticized the political and ideological stance of the [SRA.getName]. His speech emphasized the urgent need for a unified democratic coalition of regional entities including Ukraine, Kuban, Don, Terek, and Georgia to more effectively combat the Bolshevik threat. Riabovil argued that the current leadership and methods of the [SRA.getName] might hinder this coalition. His remarks have stirred significant controversy, challenging the authority and approach of the military leadership at a critical juncture."
  ww1_sra.46.a: "He has gone too far. Remove him discreetly."
@@ -14511,14 +14518,19 @@ ww1_greece.246.a: "Our failures continue to burden us."
  ww1_sra.47.d: "The assassination of Mykola Riabovil has ignited a firestorm of controversy and conflict. The Kuban Rada, in a session filled with anger and disbelief, has formally accused our officials of orchestrating this nefarious act. They have declared that asserting such measures reflect a desperation to silence any dissent or calls for reform."
  ww1_sra.47.a: "We totally didn't silence him."
 
- ww1_sra.44.t: "Disbandment of the Kuban Army"
- ww1_sra.44.d: "In a drastic response to recent events and growing internal pressure, the Kuban Rada has ordered Cossacks to abandon their positions on the frontlines and return to their homeland in Kuban. This move not only weakens our collective military efforts but also signals a significant shift in the Kuban Rada's allegiance and priorities. The sudden withdrawal of these forces could leave critical gaps in our defenses and diminish our operational capabilities against our adversaries."
- ww1_sra.44.a: "This will not go unanswered."
+ ww1_sra.48.t: "The fall of [217.getName]"
+ ww1_sra.48.d: "After intense fighting, our forces have captured Tsaritsyn from the Bolsheviks. This strategic city on the Volga River serves as a vital transportation hub and a key industrial center. The path towards Moscow is now more accessible, and the Bolsheviks are on the back foot."
+ ww1_sra.48.a: "Glory to [ROOT.GetLeader]!"
 
- ww1_sra.45.t: "Kuban Rada's Disloyalty"
- ww1_sra.45.d: "The Kuban Rada's ongoing drive for greater autonomy, coupled with a marked decline in loyalty, has pushed them to the brink of secession from our governance. Their grievances, left unaddressed while we focused on broader conflicts, have fermented into a bold declaration of independence intentions."
- ww1_sra.45.a: "We will finish this fight without them."
- 
+ ww1_sra.49.t: "Liberation of [221.getName]"
+ ww1_sra.49.d: "Our forces have successfully seized Kharkiv from Bolshevik control. As one of the major industrial and cultural centers, Kharkiv's capture is a significant blow to the Red Army. The city's factories and resources are now at our disposal, strengthening our war effort. The local population, weary of Bolshevik rule, has welcomed our troops, providing an opportunity to consolidate our influence in the region."
+ ww1_sra.49.a: "Glory to [ROOT.GetLeader]!"
+
+ ww1_sra.50.t: "Capture of [955.getName]"
+ ww1_sra.50.d: "In a decisive operation, our forces have captured the strategic port city of Sevastopol. Control of this vital naval base on the Black Sea grants us significant advantages in both naval operations and supply lines. The city's fortifications and shipyards are now under our command, allowing us to strengthen our naval capabilities and project power in the region."
+ ww1_sra.50.a: "Glory to [ROOT.GetLeader]!"
+
+
  # DON
  ww1_don.1.t: "Kaledin's Demise"
  ww1_don.1.d: "In the wake of the recent setbacks, including the loss of Rostov-on-the-Don and the disheartening retreat of the Volunteer Army during their Ice March, Ataman Alexey Kaledin has reached a somber conclusion. Believing the situation for the Don Host and our cause to be utterly hopeless, he has taken his own life, leaving a void in our leadership during these tumultuous times."
