--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -10,6 +10,8 @@
  roaring_twenties:0 "Roaring Twenties"
  roaring_twenties_desc:0 "Also called the "Années folles", this decade was ripe for cultural, societal and scientific innovations. American industry is no exception to this effect, and invests massively in civil industry and research."
  neutrality_idea_tt:0 "§RCannot revoke pact on§! §Ya neutral country§!"
+ 
+ cant_change_from_civilian_economy:0 "Can't change from §Y$civilian_economy$§!."
 
  #GENERIC
  AUSTRIAN_EMPIRE_SEPARATISM_RULE_TOOLTIP:0 "§Y[AUH.GetName]§! can't release countries until the Empire is reformed."
