--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1038,7 +1038,7 @@
  BEL_democratic_party_long:0 "Katholieke Partij/Parti Catholique"
  BEL_liberal_party:0 "LP/PL"
  BEL_liberal_party_long:0 "Liberale Partij/Parti Libéral"
- BEL_neutrality_party:0 "Huis van Saksen-Coburg/Maison de Saxe-Cobourg"
+ BEL_neutrality_party:0 "Saksen-Coburg/Saxe-Cobourg"
  BEL_neutrality_party_long:0 "Huis van Saksen-Coburg en Gotha/Maison de Saxe-Cobourg et Gotha"
  BEL_fascism_party:0 "Frontpartij"
  BEL_resistance:0 "LPLRSM-ZMLVZM"
