Revert "riverline fix"
This reverts commit f6c3be0e83662e0370c3ec078d96953cc80e168c.

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1055,10 +1055,8 @@
  STATE_1054: "Northern Saskatchewan"
  STATE_1055: "Northern Alberta"
  STATE_1056: "Patricia District"
- STATE_1057: "Andırın"
- STATE_1058: "Antep"
- STATE_1059: "Bayezit"
- STATE_1060: "Adıyaman"
+ STATE_1057: "Andirin"
+ STATE_1058: "Aintab"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
