--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14356,6 +14356,9 @@ ww1_greece.247.t: "Diaspora Greeks aid us!"
 ww1_greece.247.d: "Diaspora Greeks have always been there for us for decades now, all the way since our country's independence. Our national debt has grown yet again due to our needed expenses, however we have received yet again a paid remittance from US Greeks, a process that became common in the late 1890s. This of course alleviates the pressure of our debts, and we can dedicate those funds to repaying our loans."
 ww1_greece.247.a: "We are forever grateful."
 
+ww1_greece.248.t: "School Shooting in Gytheio!"
+ww1_greece.248.d: "The High School Principal of Gytheio telegraphed recently to the Ministry of Education that the students who failed their exams attacked their teachers yesterday, one of whom was stoned and injured, and another who was shot with a flintlock pistol without result. Four days ago, these same students had also beaten the High School principal Mr. Fragkidis for the same reasons. It is widely known throughout Greece that the people of Mani, who never got conquered by the Ottomans, are very unruly and extremely violent, and see all of our modern laws as null and void."
+ww1_greece.248.a: "A flintlock pistol?"
  # BURMA
  ww1_burma.1.t:0 "Thibaw Died!"
  ww1_burma.1.d:0 "King Thiba Min, who tried to stop British colonisation attempt and to modernise Burma, died today."
