--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -7599,6 +7599,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_rcw.7.t: "Primorsky Regional Zemstvo Council Takes Control"
  ww1_rcw.7.d: "After Kolchak lost power in Siberia and Primorye, the Primorsky Regional Zemstvo Council, headed by Medvedev, announced the temporary assumption of full power in the Primorsky Region"
  ww1_rcw.7.a: "Huh."
+ ww1_rcw.9.t: "The Yaroslavl Revolt"
+ ww1_rcw.9.d: "The city of Yaroslavl has erupted in open revolt! In defiance of our rightful rule, anti-Bolshevik elements led by counter-revolutionary officers have seized key positions within the city and are reportedly rallying significant local support. After weeks of intense and unforgiving combat, our forces have finally managed to suppress the anti-Bolshevik uprising in Yaroslavl. The city lies in ruin, widespread destruction marking every district. Rebel forces, once entrenched, have been eradicated, but the cost has been high. Key military reserves and vital supplies needed to counter the White Army in the east were tied up in this brutal fight"
+ ww1_rcw.9.a: "This is Treason."
  ww1_siberia.1.t: "Deal with Siberian Regional Duma"
  ww1_siberia.1.d: "The convocation of the Siberian Regional Duma, which took place in Tomsk, included 137 deputies. However, 46 of these mandates were held by Soviets that were banned by a special decree from our government. The Siberian Regional Duma is now confronting us by requesting that we include representatives from "censorious elements" in our government."
  ww1_siberia.1.a: "Accept representatives from soviets"
