--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1228,7 +1228,7 @@
  stalinite_plot_purged:0 "Stalinite Plot Purged?"
  SOV_industry_in_chaos_1:0 "Industry in Chaos"
  SOV_war_in_the_caucasus:0 "War in the Caucasus"v
-
+ SOV_missing_reserves:0 "Absent Reserves"
  sov_after_civil_war:0 "The End of the Civil War in Russia"
  
  #FREE TERRITORY
