work on tunisia

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10336,6 +10336,22 @@
  TUN_negociate_income_tax_reform:0 "Negociate Income Tax Balance"
  TUN_negociate_income_tax_reform_desc:0 "The current amount of the mejba amounts to 25 francs, a very significant sum for the most vulnerable Tunisian citizens. [FRA.getLeader] has therefore decided to validate a reform proposed by the advisory council aimed at reducing the amount of the mejba to 18 francs."
 
+ TUN_tax_agricultural_magnates:0 "Tax Agricultural Magnates"
+ TUN_tax_agricultural_magnates_desc:0 "Exempt from taxes, colonial farmers reign supreme over Tunisia's arable land. A budget bill would allow them to be taxed in order to restore a semblance of justice within the country."
+
+ TUN_arloing_institute:0 "Arloing Institute"
+ TUN_arloing_institute_desc:0 "The newly created Arloing Institute and the Tunisian Botanical Service are able to design new seeds, adapted to arid environments such as those in the south of Tunisia. Exploitation of the southern fields would enable significant economic development, as well as the opening of a real innovation network in North Africa."
+
+ TUN_expand_djerissa_mines_funded:0 "Has Fund Djerissa Mines"
+ TUN_expand_djerissa_mines:0 "Expand Djerissa Mines"
+ TUN_expand_djerissa_mines_desc:0 "The Société du Djebel Djerissa is expanding in the north of the country, with its extraction capacity constantly increasing since its creation in 1907. The concession must receive the blessing of the local government, in particular to begin the local use of minerals, instead of exporting them all to mainland France."
+
+ TUN_metier_jacquard_factories:0 "Métier Jacquard Model Factories"
+ TUN_metier_jacquard_factories_desc:0 "With European help, it is possible to build modern weaving workshops using the "Jacquard loom", a mechanical system increasing the rate of fabric production. With the help of the “Laboratoire d’Essai Indiègne”, the dissemination of these new tools is ensured throughout the territory."
+
+ TUN_date_agricultural_reforms:0 "[date.getYear] Agricultural Reforms"
+ TUN_date_agricultural_reforms_desc:0 "Traditional Tunisian cultivation is not profitable, durum wheat can be replaced by soft wheat, while manual tools can be modernized. The introduction of new seeds will increase soil productivity."
+
  TUN_arabize_the_tunisien:0 "Arabize \"Le Tunisien\""
  TUN_arabize_the_tunisien_desc:0 "In order to provide more equitable access to information, the Tunisian youth movement decided, under the aegis of Ali Bach Hamba, to propose the translation of the newspaper "Le tunisien" into Arabic in order to disseminate it to as many people as possible."
 
