--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -3051,7 +3051,11 @@ TUN_jeunes_tunisiens_desc:0 "The Young Tunisians are a Tunisian reform movement 
 TUN_memory_of_gabes:0 "Memories of Gabès"
 TUN_memory_of_gabes_desc:0 "The memory of the reform of the penal code is still alive in the hearts of Tunisians. Forced by the French government in order to secularize the country, it gave rise to numerous national resistance movements still active in the country. The goal of these scattered organizations is always the same: freedom and respect for Tunisian identity."
 
+TUN_powerful_landlords:0 "Powerful Landlords"
+TUN_powerful_landlords_desc:0 "Part of the colonial elite owns most of Tunisia's arable land. This situation plunges farmers into poverty and causes indignation among local populations."
+
 tunis_tramway_company:0 "Tunis Tramway Company"
+societe_du_djebel_djerissa:0 "Société du Djebel de Djerissa"
 
 MOR_resident_general_dictatorship:0 "Resident-General Dictatorship"
 MOR_resident_general_dictatorship_desc:0 "Resident General Hubert Lyautey is the true master of Morocco, deciding on matters of justice, defense, education and the economy. The Sultan [MOR.getName] is only a popular facade intended to avoid an anti-French revolution."
