Wadai civil war

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1057,7 +1057,7 @@
  STATE_1056: "Patricia District"
  STATE_1057: "Andirin"
  STATE_1058: "Aintab"
- STATE_1059: "Dar Tama"
+ STATE_1059: "Batha"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
