--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -531,6 +531,7 @@
 
  # WADAI
  CHA_muhammad_salih_bin_yusuf:0 "Muhammad Salih bin Yusuf"
+ CHA_adam_asil:0 "Adam 'Asil"
 
  # CHINA
  CHI_li_dazhao:0 "Li Dazhao"
