--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1952,3 +1952,9 @@
  
  ICE_DEN_autonomy_tgwr_real_union_DEF:0 "the Kingdom of Iceland"
  ICE_DEN_autonomy_tgwr_personal_union_DEF:0 "the Kingdom of Iceland"
+ 
+ CHA_asil_neutrality:0 "Asil's Wadai"
+ CHA_asil_neutrality_DEF:0 "the Asil's Clique of Wadai"
+ CHA_asil_neutrality_subject:0 "$OVERLORDADJ$ Wadai"
+ CHA_asil_neutrality_subject_DEF:0 "the $OVERLORDADJ$ Wadai"
+ 
