Tweak and fix interwar

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -367,6 +367,10 @@
  before_the_leaves_fall_flag:0 "The Great War has ended in less than a few weeks"
  before_the_leaves_fall_failed:0 "The Second Franco-German War has escalated into the Great War"
  before_the_leaves_fall_tt:0 "§Y[FRA.GetFlag]France§! or §Y[GER.GetFlag]Germany§! has capitulated"
+ GER_restore_austrian_bohemia:0 "Restore Bohemian Crowns"
+ GER_restore_austrian_hungary:0 "Restore the Kingdom of Hungary"
+ GER_restore_austrian_illyria:0 "Restore Illyrian Crowns"
+ GER_restore_austrian_galicia:0 "Restore the Kingdom of Galicia-Lodomeria"
  
  LIE_approach_switzerland:0 "Approach Switzerland"
 
